

DescTools 0.99.61 (2025-05-28)
------------------------------

NEW FUNCTIONS ADDED:
  * FmCI() returns formatted confidence intervals.
  * Fm() is a redesigned function for formatting numbers and dates. 
    It's gonna replace Format() in the future.
  * StringsAsFactors() helps to define characters as factors in data.frames.
  * GlassDelta() calculates another commonly used effectsize measure.
  

UPDATED FUNCTIONS:
  * XLView() uses write_xlsx instead write.table allowing better support
    for non ASCII characters.
  * CutAge() gains a new argument full, allowing to remove empty
    levels at the edges of the distribution. 
    The arguments have also been changed: "from", "to", "by" have 
    been replaced by "breaks". A new argument "labels" allow to define 
    better suited labels for age specific levels.
  * LeveneTest() has been given the same interface as similar functions in 
    base R (as ansari.test or kruskal.test). lm-interface has been defunct.
  * ConDisPairs() now runs in O(n log^2 n) instead in O(n2), and so 
    do all the dependent functions. It has been recoded in Rcpp.
  * Format() looses the two predefined formats for displaying confidence 
    intervals, fmt="ci" and fmt="ci%".

    
BUGFIXES:
  * DoBy() ignored provided names for the new created variables. 
  * Corrected several typos in names (Quesenberry, Jeffreys). 
    (Credit to musvaage in https://github.com/AndriSignorell/DescTools/pull/169)
  * ICC() no longer fails when "type" argument is set to anything other 
    than "all". (Credit to Alphonse Kwizera)
  * PercentRank() now subtracts 1 in nominator and denominator ensuring
    the scale runs from 0 to 1.  
  * ToLong() does not try to replace non existing rownames anymore. 
  * SiegelTukeyRank() works numerically more robust (Credits to speegled, 
      https://github.com/AndriSignorell/DescTools/issues/171 )
  * CCC() yields the same classes of results independently of the definition of
    na.rm. (Credits go to abichat, 