@@ -1,7 +1,7 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.60.14
+Version: 0.99.60.15
 Date: 2025-08-05
 Authors@R: c(
   person(given="Andri", family="Signorell", 
