@@ -419,4 +419,7 @@ S3method(BoxedText, formula)
 
 S3method(`[`, TOne)
 
+S3method(ToBaseR, tbl_df)
+S3method(ToBaseR, haven_labelled)
+S3method(ToBaseR, default)
 
