@@ -609,7 +609,7 @@ reference:
 #   - IsValidWrd
     - IsValidHwnd
     - ParseSASDatalines
-    - ReadSPSS
+    - ToBaseR
     - Downloads
     - PpAddSlide
     - PpPlot
