@@ -10,6 +10,7 @@ NEW FUNCTIONS ADDED:
     It's gonna replace Format() in the future.
   * StringsAsFactors() helps to define characters as factors in data.frames.
   * GlassDelta() calculates another commonly used effectsize measure.
+  * ToBaseR() helps to convert tibbles to data.frames.
   
 
 UPDATED FUNCTIONS:
@@ -48,6 +49,7 @@ BUGFIXES:
 DEFUNCT:
   * OddsRatio.multinom() has been moved to the package ModTools, where it 
     better fits.
+  * ReadSPSS() has been replaced by ToBaseR(), which is more general.  
     
     
 
